time-slicing and ui-work: - update to latest shepherd-1.1.0-dev - crawl scopes: only use specified depth if 'custom' scope - crawl list api: check for is_done() when returning crawl list?
ui work:
- use react table for crawl listing
- add 'custom' as a crawl type option

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+
+@import "../../node_modules/react-table/react-table.css";
+
 @import "../../node_modules/uikit/src/scss/variables-theme";
 @import "../../node_modules/uikit/src/scss/mixins-theme";
 
