ui work + pywb improvements: - rearrange crawl creation UI, move advanced options into separate dropdown, fix validation - add new fields to crawl list table to match cli options, use tabs in nav bar - add new Browsertrix logo to main crawl UI and pywb collection page - pywb: run from app directory, configure collections directory at /webarchive/collections - pywb: avoid auto-creating 'coll' directory every time, create /webarchive/collections on start up

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -23,6 +23,13 @@ body {
   overflow: hidden;
 }
 
+.uk-tab a {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+
+
 nav {
   border-bottom: 1px solid #e8e6ea;
   transition: background-color 250ms ease;
@@ -32,7 +39,6 @@ nav {
     transition: max-height 1.5s ease;
     max-height: 90px;
   }
-
 
   &.uk-active {
     backface-visibility: hidden;
@@ -80,3 +86,11 @@ nav {
   cursor: pointer;
   color: red;
 }
+
+.logo {
+    height: auto;
+    width: 250px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
